--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@web/dev-server": "^0.4.6",
     "nodemon": "^3.0.1"
   }
 }
