implementación de noticias

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ SPOTIFY_CLIENT_ID=09645c80b8f64fa884c261c88c191903
 SPOTIFY_CLIENT_SECRET=6e32b90376fe4e92a9f0ef7d82a857bf
 SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
 PORT=3000
+
+THENEWSAPI_KEY=aFc3Cb0HEkJA7339tLkQ5Hint8HuHEuUUJvVd2HO
