implementacion de gemini como moderador

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ SPOTIFY_CLIENT_ID=09645c80b8f64fa884c261c88c191903
 SPOTIFY_CLIENT_SECRET=6e32b90376fe4e92a9f0ef7d82a857bf
 SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
 THENEWSAPI_KEY=e0eefc20128c4408ab6db4365ac44545
+GEMINI_API_KEY=AIzaSyBEWoLR7ymuE7QmcO1YDFVZTkHzu1iyEGc
 PORT=3000
 DATABASE_URL=postgresql://root:XIeLLVGRjF9W9AztCbOy8R2mb9XTwM7X@dpg-d4647i24d50c73ccmbs0-a.oregon-postgres.render.com/attomusic
