--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
 THENEWSAPI_KEY=e0eefc20128c4408ab6db4365ac44545
 GEMINI_API_KEY=AIzaSyAD5Yi1aaEnfnKq6SWaZCDyWB9rB6KJ2-w
 PORT=3000
-DATABASE_URL=postgresql://root:XIeLLVGRjF9W9AztCbOy8R2mb9XTwM7X@dpg-d4647i24d50c73ccmbs0-a.oregon-postgres.render.com/attomusic
+DATABASE_URL=postgresql://root:yiUa84NMADXhneFRWsOxpKWC0tLhNdrj@dpg-d4nja1v5r7bs7388l5e0-a.oregon-postgres.render.com/attomusic_5yy1
