--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ SPOTIFY_REDIRECT_URI=http://localhost:3000/callback
 THENEWSAPI_KEY=e0eefc20128c4408ab6db4365ac44545
 GEMINI_API_KEY=AIzaSyB2YrdWT2Zujyqe0E22Eo_mrQ7nlmd_Z48
 PORT=3000
-DATABASE_URL=PGPASSWORD=WCTeGlcwKS98oBr459A2oUfURyp7tfnv psql -h dpg-d603nnvpm1nc73d1934g-a.oregon-postgres.render.com -U root attomusic_fb0z
+DATABASE_URL=postgresql://root:WCTeGlcwKS98oBr459A2oUfURyp7tfnv@dpg-d603nnvpm1nc73d1934g-a.oregon-postgres.render.com/attomusic_fb0z
